--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -43,8 +43,7 @@
     </style>
 </head>
 <body>
-    <!-- PORCARIA PRA TESTAR O GITHUB-->
-    <!-- PORCARIA PRA TESTAR O GITHUB-->
+    <!-- OLA O GITHUB É PANELEIRO Q FODDE -->
     <header>
         <nav class="navbar navbar-dark bg-success navbar-expand-lg fixed-top">
             <!-- mudar a cor desta merda no bg-xxxxxx-->
