--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -45,25 +45,65 @@
 <body>
     <!-- OLA O GITHUB É PANELEIRO Q FODDE -->
     <!-- Mais paneleiro impossível-->
-    <header>
-        <nav class="navbar navbar-dark bg-success navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-dark bg-success navbar-expand-lg fixed-top">
             <!-- mudar a cor desta merda no bg-xxxxxx-->
-            <div class="container">
-                <a class="navbar-brand" href="index.html">F1Tracker<div class="fa fa-flag-checkered"></div></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html">Drivers</a></li>
-                        <li class="nav-item"><a class="nav-link" aria-current="page" href="constructors.html">Constructors</a></li>
-                        <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
-                        <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html">Countries</a></li>
-                    </ul>
+        <div class="container">
+            <a class="navbar-brand" href="index.html">F1Tracker                    <div class="fa fa-flag-checkered"></div></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html">Drivers</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="constructors.html">Constructors</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html">Countries</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div id="carouselExample" class="carousel slide carousel-fade mb-5" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="3" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Títulos do Mundial de Fórmula 1 decidem-se na última prova após vitória de Hamilton no emocionante GP da Arábia Saudita -</h5>
+                    <p> Motores - SAPO Desporto</p>
                 </div>
             </div>
-        </nav>
-    </header>
+            <div class="carousel-item">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Fórmula 1 regressa à Sport TV em 2022</h5>
+                    <p>0 aos 100 / Notícias em alta rotação</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Títulos do Mundial de Fórmula 1 decidem-se na última prova após vitória de Hamilton no emocionante GP da Arábia Saudita - Motores - SAPO Desporto</h5>
+                    <p>SAPO Desporto</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Hamilton bate Verstappen e adia título de campeão mundial de Fórmula 1</h5>
+                    <p>TSF</p>
+                </div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../Scripts/knockout-3.5.1.js"></script>
     <script src="../Scripts/jquery-3.6.0.min.js"></script>
