--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -12,57 +12,41 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="utf-8" />
     <style>
-        .carousel {
-            width: 100%;
-            margin: 0 auto;
-        } 
-
-        .carousel-item {
-            z-index: -100;
-            height: 480px;
-            background-position: center center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        } 
-
-            .carousel-item:nth-child(1) {
-                background-image: url('https://mb.web.sapo.io/9644ccedd8923e117ecd2d8431295b77d06b4510.jpg');
-            }
-
-            .carousel-item:nth-child(2) {
-                background-image: url('https://staticp.0aos100.pt/posts/1633549094f1hamiltonvetteljpg_1980x600.jpg');
-            }
-
-            .carousel-item:nth-child(3) {
-                background-image: url('https://mb.web.sapo.io/20bec17326e461c884b7ec6ede85727b32cffb1e.jpg');
-            }
-
-            .carousel-item:nth-child(4) {
-                background-image: url('https://static.globalnoticias.pt/tsf/image.jpg?brand=TSF&type=generate&guid=1fb55adf-d0a0-451a-bfa5-a78033ecb357');
-            }
+            .carousel { width: 100%; margin: 0 auto; }
+            .carousel-item { z-index: -100; height: 480px; background-position: center center; background-repeat: no-repeat; background-size: cover; }
+            .carousel-item:nth-child(1) { background-image: url('https://mb.web.sapo.io/9644ccedd8923e117ecd2d8431295b77d06b4510.jpg'); }
+            .carousel-item:nth-child(2) { background-image: url('https://staticp.0aos100.pt/posts/1633549094f1hamiltonvetteljpg_1980x600.jpg'); }
+            .carousel-item:nth-child(3) { background-image: url('https://mb.web.sapo.io/20bec17326e461c884b7ec6ede85727b32cffb1e.jpg'); }
+            .carousel-item:nth-child(4) { background-image: url('https://static.globalnoticias.pt/tsf/image.jpg?brand=TSF&type=generate&guid=1fb55adf-d0a0-451a-bfa5-a78033ecb357'); }
     </style>
 </head>
 <body>
     <!-- OLA O GITHUB É PANELEIRO Q FODDE -->
-    <header>
-        <nav class="navbar navbar-dark bg-success navbar-expand-lg fixed-top">
-            <!-- mudar a cor desta merda no bg-xxxxxx-->
-            <div class="container">
-                <a class="navbar-brand" href="index.html">F1Tracker<div class="fa fa-flag-checkered"></div></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html">Drivers</a></li>
-                        <li class="nav-item"><a class="nav-link" aria-current="page" href="constructors.html">Constructors</a></li>
-                        <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
-                        <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html">Countries</a></li>
-                    </ul>
-                </div>
+
+    <nav class="navbar navbar-dark bg-success navbar-expand-lg fixed-top">
+        <!-- mudar a cor desta merda no bg-xxxxxx-->
+        <div class="container">
+            <a class="navbar-brand" href="index.html">F1Tracker<div class="fa fa-flag-checkered"></div></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html">Drivers</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="constructors.html">Constructors</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html">Countries</a></li>
+                </ul>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
+    <div class="container">
+          <h2>OLA</h2>
+        <div class="border-bottom pt-4 pb-2 mb-3">
+
+        </div>
+        </div>
+
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../Scripts/knockout-3.5.1.js"></script>
     <script src="../Scripts/jquery-3.6.0.min.js"></script>
