--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -33,8 +33,8 @@
     <nav class="navbar navbar-dark bg-success navbar-expand-lg fixed-top">
             <!-- mudar a cor desta merda no bg-xxxxxx-->
         <div class="container">
-            <a class="navbar-brand" href="index.html">F1Tracker                    <div class="fa fa-flag-checkered"></div></a>
->>>>>>> a4a8b45249ade45d39e8fba1cf195b732ef34fe4
+            <a class="navbar-brand" href="index.html">F1Tracker                   
+            <div class="fa fa-flag-checkered"></div></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -45,7 +45,6 @@
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html">Countries</a></li>
                 </ul>
-<<<<<<< HEAD
             </div>
         </div>
     </nav>
@@ -55,8 +54,6 @@
 
         </div>
         </div>
-
-=======
             </div>
         </div>
     </nav>
