já dá pra escrever debaixo da navbar -_-

--- a/Projeto/drivers.html
+++ b/Projeto/drivers.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8" />
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container">
             <a class="navbar-brand" href="index.html">F1Tracker<div class="fa fa-flag-checkered"></div></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,16 +29,14 @@
             </div>
         </div>
     </nav>
-    <!-- Working Area -->
-    <div class="container">
+    <div class="container" style="border-color:red">
         <div class="border-bottom pt-4 pb-2 mb-3">
-            <h2>Olá</h2>
-            </div>
+            OLA
         </div>
-       
-    <script src="../Scripts/bootstrap.bundle.min.js"></script>
-    <script src="../Scripts/knockout-3.5.1.js"></script>
-    <script src="../Scripts/jquery-3.6.0.min.js"></script>
-    <script src="drivers.js"></script>
+        </div>
+        <script src="../Scripts/bootstrap.bundle.min.js"></script>
+        <script src="../Scripts/knockout-3.5.1.js"></script>
+        <script src="../Scripts/jquery-3.6.0.min.js"></script>
+        <script src="drivers.js"></script>
 </body>
 </html>
