--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -21,7 +21,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-success navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-dark bg-success navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="index.html">F1Tracker                   
             <div class="fa fa-flag-checkered"></div></a>
@@ -38,12 +38,6 @@
             </div>
         </div>
     </nav>
-    <div class="container">
-          <h2>OLA</h2>
-        <div class="border-bottom pt-4 pb-2 mb-3">
-
-        </div>
-        </div>
     <div id="carouselExample" class="carousel slide carousel-fade mb-5" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -86,6 +80,7 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
+  
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../Scripts/knockout-3.5.1.js"></script>
     <script src="../Scripts/jquery-3.6.0.min.js"></script>
