--- a/Formula1/drivers.html
+++ b/Formula1/drivers.html
@@ -30,7 +30,7 @@
     <!-- Working Area -->
     <div class="container">
         <div class="border-bottom pt-4 pb-2 mb-3">
-            <h2>Olá</h2>
+            <h2>Drivers List</h2>
         </div>
         <!-- ko if:records().length > 0 -->
         <div class="row small">
