--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -53,8 +53,10 @@
 <body>
     <nav class="navbar navbar-dark bg-success navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="index.html">F1Tracker                   
-            <div class="fa fa-flag-checkered"></div></a>
+            <a class="navbar-brand" href="index.html">
+                F1Tracker
+                <div class="fa fa-flag-checkered"></div>
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -104,7 +106,36 @@
             </div>
         </div>
     </div>
-  
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+        <div class="col">
+            <div class="card">
+                <img src="https://staticg.sportskeeda.com/editor/2019/01/03554-15465753188506-800.jpg" class="card-img-top" alt="The History" height="325">
+                <div class="card-body">
+                    <h5 class="card-title">Fórmula 1 - The History</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../Scripts/knockout-3.5.1.js"></script>
     <script src="../Scripts/jquery-3.6.0.min.js"></script>
