--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -108,13 +108,17 @@
     </div>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <div class="col">
-            <div class="card">
-                <img src="https://staticg.sportskeeda.com/editor/2019/01/03554-15465753188506-800.jpg" class="card-img-top" alt="The History" height="325">
-                <div class="card-body">
-                    <h5 class="card-title">Fórmula 1 - The History</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-            </div>
+            <button style="border: none;" type="button" class="btn btn-light">
+                <a href="drivers.html">
+                    <div class="card">
+                        <img src="https://staticg.sportskeeda.com/editor/2019/01/03554-15465753188506-800.jpg" class="card-img-top" alt="The History" height="325">
+                        <div class="card-body">
+                            <h5 class="card-title">Formula 1 - The History</h5>
+                            <p class="card-text">All you need to know about Formula 1.</p>
+                        </div>
+                    </div>
+                </a>
+            </button>
         </div>
         <div class="col">
             <div class="card">
