--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -108,17 +108,13 @@
     </div>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <div class="col">
-            <button style="border: none;" type="button" class="btn btn-light">
-                <a href="drivers.html">
-                    <div class="card">
+                    <div class="card-link">
                         <img src="https://staticg.sportskeeda.com/editor/2019/01/03554-15465753188506-800.jpg" class="card-img-top" alt="The History" height="325">
                         <div class="card-body">
                             <h5 class="card-title">Formula 1 - The History</h5>
                             <p class="card-text">All you need to know about Formula 1.</p>
                         </div>
                     </div>
-                </a>
-            </button>
         </div>
         <div class="col">
             <div class="card">
