--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -112,7 +112,7 @@
                         <img src="https://staticg.sportskeeda.com/editor/2019/01/03554-15465753188506-800.jpg" class="card-img-top" alt="The History" height="325">
                         <div class="card-body">
                             <h5 class="card-title">Formula 1 - The History</h5>
-                            <p class="card-text"><a href="drivers.html" style="text-decoration:none">All you need to know about Formula 1.</a></p>
+                            <p class="card-text"><a href="history.html" style="text-decoration: none">All you need to know about Formula 1.</a></p>
                         </div>
                     </div>
         </div>
