--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -118,9 +118,9 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="https://m.media-amazon.com/images/M/MV5BNTBlOGYzZmQtOWQ2Ny00ZGRlLTk1YzYtNzkwY2ZlYTVkYWJjXkEyXkFqcGdeQXVyNTE1NjY5Mg@@._V1_.jpg" class="card-img-top" alt="The Legends" height="325">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">Formula 1 - The Legends</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
             </div>
