--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -121,16 +121,16 @@
                 <img src="https://m.media-amazon.com/images/M/MV5BNTBlOGYzZmQtOWQ2Ny00ZGRlLTk1YzYtNzkwY2ZlYTVkYWJjXkEyXkFqcGdeQXVyNTE1NjY5Mg@@._V1_.jpg" class="card-img-top" alt="The Legends" height="325">
                 <div class="card-body">
                     <h5 class="card-title">Formula 1 - The Legends</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><a href="" style="text-decoration: none">The ones we will never forget.</a></p>
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="card">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="..." class="card-img-top" alt="The Rules">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                    <h5 class="card-title">Formula 1 - Rules</h5>
+                    <p class="card-text"><a href="drivers.html" style="text-decoration: none"></a></p>
                 </div>
             </div>
         </div>
