--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -67,6 +67,17 @@
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html">Countries</a></li>
                 </ul>
+                <div class="dropdown">
+                    <button class="dropbtn">
+                        Dropdown
+                        <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
+                </div>
             </div>
         </div>
     </nav>
@@ -109,7 +120,7 @@
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
         <div class="col">
                     <div class="card-link">
-                        <img src="https://staticg.sportskeeda.com/editor/2019/01/03554-15465753188506-800.jpg" class="card-img-top" alt="The History" height="325">
+                        <img src="https://staticg.sportskeeda.com/editor/2019/01/03554-15465753188506-800.jpg" class="card-img-top" alt="The History" height="315">
                         <div class="card-body">
                             <h5 class="card-title">Formula 1 - The History</h5>
                             <p class="card-text"><a href="history.html" style="text-decoration: none">All you need to know about Formula 1.</a></p>
@@ -118,7 +129,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="https://m.media-amazon.com/images/M/MV5BNTBlOGYzZmQtOWQ2Ny00ZGRlLTk1YzYtNzkwY2ZlYTVkYWJjXkEyXkFqcGdeQXVyNTE1NjY5Mg@@._V1_.jpg" class="card-img-top" alt="The Legends" height="325">
+                <img src="https://i.pinimg.com/736x/64/d0/c7/64d0c7c90fffc79c565e95b61ae35f3d.jpg" class="card-img-top" alt="The Legends" height="315">
                 <div class="card-body">
                     <h5 class="card-title">Formula 1 - The Legends</h5>
                     <p class="card-text"><a href="" style="text-decoration: none">The ones we will never forget.</a></p>
@@ -127,10 +138,10 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="..." class="card-img-top" alt="The Rules">
+                <img src="https://www.verstappen.com/img/2019/Algemene_Autosport_Fotos/JMP_1964-45b.jpg" class="card-img-top" alt="The Rules">
                 <div class="card-body">
                     <h5 class="card-title">Formula 1 - Rules</h5>
-                    <p class="card-text"><a href="drivers.html" style="text-decoration: none"></a></p>
+                    <p class="card-text"><a href="drivers.html" style="text-decoration: none">The rules of formula 1.</a></p>
                 </div>
             </div>
         </div>
