--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -66,18 +66,18 @@
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="constructors.html">Constructors</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html">Countries</a></li>
+                    <li class="dropdown">
+                        <button class="dropbtn">
+                            Dropdown
+                            <i class="fa fa-caret-down"></i>
+                        </button>
+                        <li class="dropdown-content">
+                            <a href="#">Link 1</a>
+                            <a href="#">Link 2</a>
+                            <a href="#">Link 3</a>
+                        </li>
+                     </li>
                 </ul>
-                <div class="dropdown">
-                    <button class="dropbtn">
-                        Dropdown
-                        <i class="fa fa-caret-down"></i>
-                    </button>
-                    <div class="dropdown-content">
-                        <a href="#">Link 1</a>
-                        <a href="#">Link 2</a>
-                        <a href="#">Link 3</a>
-                    </div>
-                </div>
             </div>
         </div>
     </nav>
@@ -138,7 +138,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="https://www.verstappen.com/img/2019/Algemene_Autosport_Fotos/JMP_1964-45b.jpg" class="card-img-top" alt="The Rules">
+                <img src="https://www.verstappen.com/img/2019/Algemene_Autosport_Fotos/JMP_1964-45b.jpg" class="card-img-top" alt="The Rules" height="315">
                 <div class="card-body">
                     <h5 class="card-title">Formula 1 - Rules</h5>
                     <p class="card-text"><a href="drivers.html" style="text-decoration: none">The rules of formula 1.</a></p>
