--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -65,18 +65,15 @@
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html">Drivers</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="constructors.html">Constructors</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html">Countries</a></li>
-                    <li class="dropdown">
-                        <button class="dropbtn">
-                            Dropdown
-                            <i class="fa fa-caret-down"></i>
-                        </button>
-                        <li class="dropdown-content">
-                            <a href="#">Link 1</a>
-                            <a href="#">Link 2</a>
-                            <a href="#">Link 3</a>
-                        </li>
-                     </li>
+                    <li class="nav-item"><div class="dropdown">
+                        <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false"> MORE </a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <li><a class="dropdown-item" href="#">History</a></li>
+                            <li><a class="dropdown-item" href="#">Legends</a></li>
+                            <li><a class="dropdown-item" href="#">Rules</a></li>
+                        </ul>
+                    </div>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -146,7 +143,6 @@
             </div>
         </div>
     </div>
-
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../Scripts/knockout-3.5.1.js"></script>
     <script src="../Scripts/jquery-3.6.0.min.js"></script>
