--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -66,14 +66,16 @@
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="drivers.html">Drivers</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="constructors.html">Constructors</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
-                    <li class="nav-item"><div class="dropdown">
-                        <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false"> MORE </a>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">History</a></li>
-                            <li><a class="dropdown-item" href="#">Legends</a></li>
-                            <li><a class="dropdown-item" href="#">Rules</a></li>
-                        </ul>
-                    </div>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html">Countries</a></li>
+                    <li class="nav-item">
+                        <div class="dropdown">
+                            <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">More</a>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                <li><a class="dropdown-item" href='history.html'>History</a></li>
+                                <li><a class="dropdown-item" href="legends.html">Legends</a></li>
+                                <li><a class="dropdown-item" href="rules.html">Rules</a></li>
+                            </ul>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -89,27 +91,27 @@
             <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="5" aria-label="Slide 5"></button>
         </div>
         <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div class="carousel-item active" data-bs-interval="6000">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-bs-interval="6000">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-bs-interval="6000">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-bs-interval="6000">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-bs-interval="6000">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item" data-bs-interval="6000">
                 <div class="carousel-caption d-none d-md-block">
                 </div>
             </div>
@@ -130,7 +132,7 @@
                 <img src="https://i.pinimg.com/736x/64/d0/c7/64d0c7c90fffc79c565e95b61ae35f3d.jpg" class="card-img-top" alt="The Legends" height="315">
                 <div class="card-body">
                     <h5 class="card-title">Formula 1 - The Legends</h5>
-                    <p class="card-text"><a href="" style="text-decoration: none">The ones we will never forget.</a></p>
+                    <p class="card-text"><a href="legends.html" style="text-decoration: none">The ones we will never forget.</a></p>
                 </div>
             </div>
         </div>
@@ -139,7 +141,7 @@
                 <img src="https://www.verstappen.com/img/2019/Algemene_Autosport_Fotos/JMP_1964-45b.jpg" class="card-img-top" alt="The Rules" height="315">
                 <div class="card-body">
                     <h5 class="card-title">Formula 1 - Rules</h5>
-                    <p class="card-text"><a href="drivers.html" style="text-decoration: none">The rules of formula 1.</a></p>
+                    <p class="card-text"><a href="rules.html" style="text-decoration: none">The rules of formula 1.</a></p>
                 </div>
             </div>
         </div>
