--- a/Projeto/legends.html
+++ b/Projeto/legends.html
@@ -14,7 +14,7 @@
     <meta charset="utf-8" />
     <title></title>
 </head>
-<body>
+<body style="background-image: url(https://w0.peakpx.com/wallpaper/737/716/HD-wallpaper-legends-ayrton-senna-f1-fia-formula-1-formula1-michael-schumacher-niki-lauda-schumacher-senna.jpg);  background-repeat: no-repeat; background-size: cover;">
     <nav class="navbar navbar-dark bg-success navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="index.html">
@@ -30,10 +30,108 @@
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="constructors.html">Constructors</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="circuits.html">Circuits</a></li>
                     <li class="nav-item"><a class="nav-link" aria-current="page" href="countries.html">Countries</a></li>
+                    <li class="nav-item">
+                        <div class="dropdown">
+                            <a class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">More</a>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                <li><a class="dropdown-item" href='history.html'>History</a></li>
+                                <li><a class="dropdown-item" href="legends.html">Legends</a></li>
+                                <li><a class="dropdown-item" href="rules.html">Rules</a></li>
+                            </ul>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
+    <div>
+        <p>.</p>
+        <p>.</p>
+        <p>.</p>
+        <p>.</p>
+        <p>.</p>
+        <p>.</p>
+    </div>
+    <div class="accordion accordion-flush" id="accordionFlushExample">
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingOne">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    <b>Nino Farina - 1950</b>
+                </button>
+            </h2>
+            <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                    <b>The first ever Formula One World Champion </b>came from a privileged background and had a stylish driving technique that was adopted by many drivers.
+                    A hard and determined racer, Farina relied on a combination of profound self belief and raw courage to compensate for the superior skills possessed by
+                    man of his more naturally talented opponents. Yet he also drove recklessly and few Formula One drivers ever competed with such apparent disregard for
+                    their personal safety. Somehow surviving an accident-strewn racing career, he was eventually killed in a road accident.
+                </div>
+            </div>
+        </div>
+        <br />
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingTwo">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                    <b>Juan Manuel Fangio - 1951, 1954-1957</b>
+                </button>
+            </h2>
+            <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+            </div>
+        </div>
+        <br />
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingThree">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                    Accordion Item #3
+                </button>
+            </h2>
+            <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+            </div>
+        </div>
+        <br />
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingFour">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseOne">
+                    <b>Accordion Item #4</b>
+                </button>
+            </h2>
+            <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">
+                    <b>The first ever Formula One World Champion </b>came from a privileged background and had a stylish driving technique that was adopted by many drivers.
+                    A hard and determined racer, Farina relied on a combination of profound self belief and raw courage to compensate for the superior skills possessed by
+                    man of his more naturally talented opponents. Yet he also drove recklessly and few Formula One drivers ever competed with such apparent disregard for
+                    their personal safety. Somehow surviving an accident-strewn racing career, he was eventually killed in a road accident.
+                </div>
+            </div>
+        </div>
+        <br />
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingFive">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
+                    <b>Accordion Item #5</b>
+                </button>
+            </h2>
+            <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+            </div>
+        </div>
+        <br />
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="flush-headingSix">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
+                    <b>Accordion Item #6</b>
+                </button>
+            </h2>
+            <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix" data-bs-parent="#accordionFlushExample">
+                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+
+    </div>
 
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
     <script src="../Scripts/knockout-3.5.1.js"></script>
