--- a/Projeto/legends.html
+++ b/Projeto/legends.html
@@ -130,7 +130,7 @@
         </div>
     </div>
     <div class="footer">
-
+        hello
     </div>
 
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
