--- a/Projeto/legends.html
+++ b/Projeto/legends.html
@@ -52,7 +52,7 @@
         <p>.</p>
         <p>.</p>
     </div>
-    <div class="accordion accordion-flush" id="accordionFlushExample">
+    <div class="accordion accordion-flush mx-auto d-block;" id="accordionFlushExample" style="width: 75%;">
         <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -61,10 +61,12 @@
             </h2>
             <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                 <div class="accordion-body">
-                    <b>The first ever Formula One World Champion </b>came from a privileged background and had a stylish driving technique that was adopted by many drivers.
-                    A hard and determined racer, Farina relied on a combination of profound self belief and raw courage to compensate for the superior skills possessed by
-                    man of his more naturally talented opponents. Yet he also drove recklessly and few Formula One drivers ever competed with such apparent disregard for
-                    their personal safety. Somehow surviving an accident-strewn racing career, he was eventually killed in a road accident.
+                    <p>
+                        <b>The first ever Formula One World Champion </b>came from a privileged background and had a stylish driving technique that was adopted by many drivers.
+                        A hard and determined racer, Farina relied on a combination of profound self belief and raw courage to compensate for the superior skills possessed by
+                        man of his more naturally talented opponents. Yet he also drove recklessly and few Formula One drivers ever competed with such apparent disregard for
+                        their personal safety. Somehow surviving an accident-strewn racing career, he was eventually killed in a road accident.
+                    </p>
                 </div>
             </div>
         </div>
