--- a/Projeto/legends.html
+++ b/Projeto/legends.html
@@ -52,7 +52,7 @@
         <p>.</p>
         <p>.</p>
     </div>
-    <div class="accordion accordion-flush mx-auto d-block;" id="accordionFlushExample" style="width: 75%;">
+    <div class="accordion accordion-flush mx-auto d-block;" id="accordionFlushExample" style="width: 70%;">
         <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingOne">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
@@ -67,6 +67,7 @@
                         man of his more naturally talented opponents. Yet he also drove recklessly and few Formula One drivers ever competed with such apparent disregard for
                         their personal safety. Somehow surviving an accident-strewn racing career, he was eventually killed in a road accident.
                     </p>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/f/fc/NinoFarina.jpg" height="190" alt="Nino Farina"/>
                 </div>
             </div>
         </div>
@@ -78,7 +79,12 @@
                 </button>
             </h2>
             <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                <div class="accordion-body">
+                    <p>
+                        Many consider him to be <b>the greatest driver of all time.</b> In seven full Formula One seasons (he missed one recovering from a nearly fatal injury) he was World Champion five times (with four different teams) and runner-up twice. In his 51 championship Grands Prix he started from the front row 48 times (including 29 pole positions) and set 23 fastest race laps en route to 35 podium finishes, 24 of them victories. His superlative track record was achieved by some of the greatest displays of skill and daring ever seen. Fangio did it all with style, grace, nobility and a sense of honour never seen before or since.
+                    </p>
+                    <img src="https://image.posterlounge.pt/images/l/1883551.jpg" height="190" alt="Juan Manuel Fangio" />
+                </div>
             </div>
         </div>
         <br />
@@ -132,7 +138,7 @@
         </div>
     </div>
     <div class="footer">
-        hello
+        .
     </div>
 
     <script src="../Scripts/bootstrap.bundle.min.js"></script>
