--- a/Projeto/legends.html
+++ b/Projeto/legends.html
@@ -14,7 +14,7 @@
     <meta charset="utf-8" />
     <title></title>
 </head>
-<body style="background-image: url(https://w0.peakpx.com/wallpaper/737/716/HD-wallpaper-legends-ayrton-senna-f1-fia-formula-1-formula1-michael-schumacher-niki-lauda-schumacher-senna.jpg);  background-repeat: no-repeat; background-size: cover; background-position: center;">
+<body style="background-image: url(https://w0.peakpx.com/wallpaper/737/716/HD-wallpaper-legends-ayrton-senna-f1-fia-formula-1-formula1-michael-schumacher-niki-lauda-schumacher-senna.jpg);  background-repeat: no-repeat; background-size: cover; background-position: center">
     <nav class="navbar navbar-dark bg-success navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand" href="index.html">
@@ -518,7 +518,7 @@
         <br />
         <div class="accordion-item">
             <h2 class="accordion-header" id="flush-headingThirdy">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwentyThirdy" aria-expanded="false" aria-controls="flush-collapseThirdy">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThirdy" aria-expanded="false" aria-controls="flush-collapseThirdy">
                     <b>Lewis Hamilton - 2008, 2014, 2015, 2017-2020</b>
                 </button>
             </h2>
