--- a/Projeto/circuits.html
+++ b/Projeto/circuits.html
@@ -44,7 +44,7 @@
     </nav>
     <div class="container">
         <div class="border-bottom pt-4 pb-2 mb-3">
-            <h2>Drivers List</h2>
+            <h2>Circuits List</h2>
         </div>
         <!-- ko if:records().length > 0 -->
         <div class="row small">
