--- a/Teste de tretas/teste.html
+++ b/Teste de tretas/teste.html
@@ -6,18 +6,10 @@
     <link href="teste.css" rel="stylesheet" />
 </head>
 <body>
-    <table>
-        <tbody data-bind="foreach: groupedUsers">
-            <tr data-bind="foreach: $data">
-                <td data-bind="text: name">
-                </td>
-                <td data-bind="text: age">
-                </td>
-                <td data-bind="text: nat">
-                </td>
-            </tr>
-        </tbody>
-    </table>
+        <div class="container" data-bind="foreach: groupedUsers">
+            <h1 data-bind="foreach: $data"> </h1>
+                <h2 data-bind="text: name"> </h2>
+        </div>
     <script src="../Scripts/knockout-3.5.1.js"></script>
     <script src="teste.js"></script>
 </body>
