--- a/Projeto/drivers.html
+++ b/Projeto/drivers.html
@@ -48,18 +48,18 @@
             <h2>Drivers List</h2>
         </div>
         <!-- ko if:records().length > 0 -->
-        <div class="row small">
-            <p class=" col-4 mr-auto pt-2">
-                <span data-bind="html: 'Page: ' + currentPage() + ' of ' + totalPages()"></span><br />
-                <span data-bind="html: 'Drivers: '+ fromRecord() + '-' + toRecord() + ' of ' + totalRecords()"></span>
-            </p>
-            <div class="col-8 my-0 pt-3">
-                <div class="container">
-                    <input class="form-control" ID="SearchText" placeholder="Search by Name" style="width:300px; float: left;"/>
-                </div>
-                <div>
-                    <button class="btn-fav btn-outline-success" style="width: 200px;height:30px;float:right;">Show Favorites</button>
-                </div>
+        <p class=" col-4 mr-auto pt-2">
+            <span data-bind="html: 'Page: ' + currentPage() + ' of ' + totalPages()"></span><br />
+            <span data-bind="html: 'Drivers: '+ fromRecord() + '-' + toRecord() + ' of ' + totalRecords()"></span>
+        </p>
+        <div class="row-cols-3">
+            <div class="row" style="float: left;">
+                <input class="form-control" ID="SearchText" placeholder="Search by Name" style="width:300px; float: left;" />
+            </div>
+            <div class="row">
+                <button class="btn-fav btn-outline-success" style="width: 200px;height:30px;">Show Favorites</button>
+            </div>
+            <div class="col-8 my-0 pt-3" style="float: right;">
                 <ul class="pagination float-end">
                     <!-- ko if: currentPage() > 5 && totalPages() > 10 -->
                     <li class="page-item float-end"><a class="page-link" title="First Page" data-bind="attr: { href: './drivers.html?page=' + '1',  rel:'prev'}">⇤</a></li>
