--- a/Projeto/driverDetails.html
+++ b/Projeto/driverDetails.html
@@ -78,7 +78,7 @@
                 <td class="col-md-10" data-bind="text: Wins"></td>
             </tr>
             <tr class="row">
-        <th class="col-md-2">Last Position</th>
+        <th class="col-md-2">Last Placement</th>
         <td class="col-md-10" data-bind="text: LastPos"></td>
     </tr>
             <tr class="row">
