--- a/Projeto/driverDetails.html
+++ b/Projeto/driverDetails.html
@@ -42,6 +42,7 @@
             </div>
         </div>
     </nav>
+    <div class="filler" style="width:100%;height:50px"></div>
     <!-- Work Area-->
     <div class="container">
         <div class="py-2 mb-3">
@@ -78,9 +79,9 @@
                 <td class="col-md-10" data-bind="text: Wins"></td>
             </tr>
             <tr class="row">
-        <th class="col-md-2">Last Placement</th>
-        <td class="col-md-10" data-bind="text: LastPos"></td>
-    </tr>
+                <th class="col-md-2">Last Placement</th>
+                <td class="col-md-10" data-bind="text: LastPos"></td>
+            </tr>
             <tr class="row">
                 <th class="col-md-2">Learn More About <span data-bind="text: Name"></span></th>
                 <td class="col-md-10"><a class="text-muted text-decoration-none" data-bind="attr: {href: Url, target:'blank'}"><i class="fa fa-external-link"></i> [<span class="" data-bind="text: Url"></span>]</a></td>
