--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -52,7 +52,7 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-success navbar-expand-lg">
+    <nav class="navbar navbar-dark bg-danger navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 F1Tracker
@@ -81,6 +81,7 @@
             </div>
         </div>
     </nav>
+    <div class="filler" style="width:100%;height:50px"></div>
     <div id="carouselExample" class="carousel slide carousel-fade mb-5" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExample" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
