--- a/Projeto/legends.html
+++ b/Projeto/legends.html
@@ -15,7 +15,7 @@
     <title></title>
 </head>
 <body style="background-image: url(https://w0.peakpx.com/wallpaper/737/716/HD-wallpaper-legends-ayrton-senna-f1-fia-formula-1-formula1-michael-schumacher-niki-lauda-schumacher-senna.jpg);  background-repeat: no-repeat; background-size: cover; background-position: center">
-    <nav class="navbar navbar-dark bg-success navbar-expand-lg">
+    <nav class="navbar navbar-dark bg-danger navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 F1Tracker
@@ -44,6 +44,7 @@
             </div>
         </div>
     </nav>
+    <div class="filler" style="width:100%;height:50px"></div>
     <div>
         <p>.</p>
         <p>.</p>
