--- a/Projeto/circuits.html
+++ b/Projeto/circuits.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8" />
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-success navbar-expand-lg">
+    <nav class="navbar navbar-dark bg-danger navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 F1Tracker
@@ -42,6 +42,7 @@
             </div>
         </div>
     </nav>
+    <div class="filler" style="width:100%;height:50px"></div>
     <div class="container">
         <div class="border-bottom pt-4 pb-2 mb-3">
             <h2>Circuits List</h2>
