--- a/Projeto/nav.html
+++ b/Projeto/nav.html
@@ -5,7 +5,7 @@
     <title></title>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-success navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-dark bg-danger navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 F1Tracker
@@ -24,5 +24,6 @@
             </div>
         </div>
     </nav>
+    <div class="filler" style="width:100%;height:50px"></div>
 </body>
 </html>
