--- a/Projeto/index.html
+++ b/Projeto/index.html
@@ -54,7 +54,7 @@
 <body>
     <nav class="navbar navbar-dark bg-danger navbar-expand-lg fixed-top" style="height:70px;">
         <div class="container">
-            <a class="navbar-brand" href="index.html" style="font-weight:bold;padding-right:30px;">
+            <a class="navbar-brand" href="index.html" style="font-weight:bold;padding-right:30px;font-size:25px;">
                 F1Tracker
                 <div class="fa fa-flag-checkered"></div>
             </a>
